[tool.poetry]
name = "loading-api-wrapper"
version = "0.1.0"
description = "Python api wrapper for loading.se"
authors = ["hnrkcode <44243358+hnrkcode@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
